# k8swalski

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Taskfile.yml  compose.yaml  docker-compose.yml  flake.nix  rustfmt.toml
.devcontainer/: devcontainer.json  env.nix
.github/actions/setup-docker-buildx/: action.yml
.github/actions/setup-rust-env/: action.yml
.github/scripts/: replace-section.js  update-readme.js  update-readme.sh
.github/workflows/: build-push-ghcr.yml  update-readme.yml
deploy/: compose.yaml
deploy/k8s/: README.md
deploy/k8s/base/: deployment.yaml  kustomization.yaml
deploy/k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml
deploy/k8s/overlays/prod/: deployment-patch.yaml  kustomization.yaml
k8s/base/: service.yaml
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs
tests/: integration_tests.rs
