[package]
name = "k8swalski"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["audacioustux"]
license = "MIT"
description = "HTTP/HTTPS echo server for debugging and testing"
repository = "https://github.com/audacioustux/k8swalski"

[[bin]]
name = "k8swalski"
path = "src/main.rs"

[lib]
name = "k8swalski"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "http2"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "compression-gzip", "limit", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI & Configuration
clap = { version = "4", features = ["derive", "env"] }

# Error handling
anyhow = "1"
thiserror = "1"

# HTTP/TLS
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }

# Time and async utilities
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# Certificate generation
rcgen = "0.13"

# System utilities
hostname = "0.4"
url = "2"
flate2 = "1.0"
mime_guess = "2.0"
bytes = "1.5"

# Optional features
jsonwebtoken = { version = "9", optional = true }
prometheus = { version = "0.14", optional = true }

[features]
default = ["jwt", "prometheus", "mtls"]
jwt = ["dep:jsonwebtoken"]
prometheus = ["dep:prometheus"]
mtls = []
default-certs = []

[dev-dependencies]
axum-test = "17"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
